<?xml version="1.0"?>
<package>
  <name>espeleo_gazebo</name>
  <version>0.0.0</version>
  <description>The espeleo_gazebo package</description>


  <maintainer email="gabrcg@gmail.com">Gabriel Garcia</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
